# StandX_Market_Making_Grid_Dry_Run

./: .gitignore  CLAUDE.md  Cargo.toml  QUICKSTART.md  README.md  check_grid_results.py  grid_config.json
src/: config.rs  dry_run_engine.rs  grid_runner.rs  grid_slot.rs  main.rs  simulated_order.rs  summary.rs  trade_logger.rs  types.rs
src/strategy/: mod.rs  obi.rs  quotes.rs  rolling.rs
src/websocket/: client.rs  messages.rs  mod.rs  reconnect.rs
